<resources>
    <string name="app_name">Nattramn</string>
    <string name="enter">ورود</string>
    <string name="enterSubtitle">ورود به حساب کاربری</string>
    <string name="usernameHint">نام کاربری (یا ایمیل)</string>
    <string name="passwordHint">کلمه عبور</string>
    <string name="noAccountQuestion">حساب کاربری ندارید؟</string>
    <string name="register">عضو شوید</string>
    <string name="icon">icon</string>
    <string name="homeSearchHint">جست وجوی مقاله</string>
    <string name="homePage">صفحه اول</string>
    <string name="latestArticles">جدید ترین مقالات</string>
    <string name="writeArticleIcon">نوشتن مقاله</string>
    <string name="news">اپل خبر تجزیه سهام خود را اعلام کرد-این برای سرمایه گذاران چه معنایی خواهد داشت؟</string>


    <string name="membership">عضویت</string>
    <string name="create_new_account">ایجاد حساب کاربری جدید</string>
    <string name="email">ایمیل</string>
    <string name="rep_password">تکرار کلمه عبور</string>
    <string name="alreadyUser">حساب کاربری دارید ؟</string>
    <string name="join">وارد شوید !</string>
    <string name="splashSubtitle">به بهترین ها فکر کنید! خوش آمدید</string>
    <string name="articleFragAppbarTitle">تک مقاله</string>
    <string name="keywordsSA">کلید واژه ها</string>
    <string name="addComment">ارسال دیدگاه</string>
    <string name="relatedArticlesSA">مقالات مرتبط</string>
    <string name="commentsTitle">نظرات کاربران</string>
    <string name="hosseinMirzaei">حسین میرزایی</string>
    <string name="follow">دنبال کردن</string>
    <string name="open_profile_to_do">Open Profile</string>
    <string name="write_article_to_do">Write Article</string>
    <string name="followers">دنبال کننده</string>
    <string name="articlesInfo">نوشته</string>
    <string name="profileArticlesTitle">نوشته ها</string>
    <string name="englishTeacher">مدرس زبان انگلیسی</string>
    <string name="profile">پروفایل</string>
    <string name="writeCommentHint">دیدگاه خود را اینجا بنویسید</string>
    <string name="writeCommentTitle">ارسال دیدگاه</string>
    <string name="favorites">علاقه مندی ها</string>
    <string name="errorEmailFormat">ایمیل وارد شده صحیح نیست</string>
    <string name="errorEnterEmail">لطفا ایمیل خود را وارد نمایید</string>
    <string name="errorEmailOrUsernameFormat">نام کاربری یا ایمیل وارد شده صحیح نیست</string>
    <string name="errorEnterUsername">نام کاربری خود را وارد نمایید</string>
    <string name="errorPasswordConfirmation">کلمات عبور یکسان نیستند!</string>
    <string name="publishArticle">انتشار مقاله</string>
    <string name="writePageTitle">نوشتن مقاله</string>
    <string name="articleDraft">پیش نویس</string>
    <string name="title">عنوان</string>
    <string name="writeArticleBody">متن مقاله</string>
    <string name="writeKeywords">کلمه کلیدی</string>
    <string name="EditArticle">ویرایش مقاله</string>
    <string name="DeleteArticle">حذف مقاله</string>
    <string name="HomeTabTitleKeywords">کلید واژه ها</string>
    <string name="HomeForYou">برای شما</string>
    <string name="shareArticle">اشتراک گذاری مقاله</string>
    <string name="job">مدرس زبان انگلیسی</string>
    <string name="logout">خروج</string>

    <string name="messageDelete">حذف مقاله</string>
    <string name="messagePleaseWait">لطفا صبر کنید</string>
    <string name="messageArticleTitleLimit">حداقل ۱۵ کاراکتر</string>
    <string name="messageArticleBodyLimit">حداقل ۳۰ کاراکتر</string>
    <string name="messageFollowing">در حال دنبال کردن</string>
    <string name="messageCommentSubmitSuccess">دیدگاه شما ثبت شد</string>
    <string name="messageServerConnectionError">خطا در ارتباط با سرور</string>
    <string name="messageLogoutTitle">خروج از حساب کاربری</string>
    <string name="messagePublishArticleSuccess">مقاله با موفقیت ثبت گردید</string>
    <string name="messageArticleSearchError">خطا در جست و جوی مقالات</string>
    <string name="messageSuggestionsArticleSearchError">خطا در جست و جوی مقالات مرتبط</string>
    <string name="messageArticleEditSuccess">مقاله با موفقیت ویرایش گردید</string>
    <string name="messageGetNewDataError">خطا در چک کردن آخرین تغییرات</string>
    <string name="messageArticleDeleteSuccess">حذف مقاله با موفقیت انجام شد</string>
    <string name="messageRequestFailedTa">درخواست ناموفق، دوباره امتحان کنید</string>
    <string name="messageFollowRequestFailedTa">دنبال کردن ناموفق، دوباره امتحان کنید</string>
    <string name="messageDeleteArticleConfirm">آیا از حذف کردن مقاله مطمئن هستید؟</string>
    <string name="messageSaveDraftSuccess">مقاله در لیست پیش نویس ها ثبت شد</string>
    <string name="messageLogoutConfirmTitle">اطلاعات ورود شما از دست خواهند رفت!</string>
    <string name="messageRemoveBookmarkSuccess">این مقاله از لیست علاقه مندی ها حذف شد</string>
    <string name="messageBookmarkSuccess">این مقاله به لیست علاقه مندی ها اضافه شد</string>
    <string name="messageSaveDraftFailed">خطا در ذخیره کردن مقاله. لطفا دوباره تلاش کنید.</string>
    <string name="messageGetArticleFailed">خطا در دریافت مقاله. لطفا دوباره امتحان کنید</string>
    <string name="messageApplyChanges">اعمال ویرایش</string>
    <string name="messageNo">خیر</string>
    <string name="messageYes">بله</string>
    <string name="noKeyWords">کلید واژه ای یافت نشد</string>
    <string name="noArticles">مقاله ای پیدا نشد</string>
    <string name="errorUsernameTaken">این نام کاربری در دسترس نیست</string>

</resources>