<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.nattramn.features.user.ui.viewmodels.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteBackground"
        android:layoutDirection="rtl"
        tools:context=".features.user.ui.fragments.LoginFragment">

        <ImageView
            android:id="@+id/partLogo"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="@id/secondHorizontalGuide"
            app:layout_constraintEnd_toEndOf="@id/firstVerticalGuide"
            app:layout_constraintStart_toStartOf="@id/thirdVerticalGuide"
            app:layout_constraintTop_toTopOf="@id/firstHorizontalGuide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/firstVerticalGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/thirdVerticalGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/firstHorizontalGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/secondHorizontalGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />

        <TextView
            android:id="@+id/enterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top"
            android:text="@string/enter"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_h1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partLogo" />

        <TextView
            android:id="@+id/enterSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_micro"
            android:text="@string/enterSubtitle"
            android:textColor="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTextFieldUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_margin_top"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:hint="@string/usernameHint"
            android:layoutDirection="rtl"
            android:textColorHint="@color/hint"
            app:boxCornerRadiusBottomEnd="@dimen/radius_normal"
            app:boxCornerRadiusBottomStart="@dimen/radius_normal"
            app:boxCornerRadiusTopEnd="@dimen/radius_normal"
            app:boxCornerRadiusTopStart="@dimen/radius_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterSubtitle"
            app:startIconDrawable="@mipmap/ic_person"
            app:startIconTint="@color/textInputIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTextFieldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/margin_micro"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:hint="@string/passwordHint"
            android:layoutDirection="rtl"
            android:textColorHint="@color/hint"
            app:boxCornerRadiusBottomEnd="@dimen/radius_normal"
            app:boxCornerRadiusBottomStart="@dimen/radius_normal"
            app:boxCornerRadiusTopEnd="@dimen/radius_normal"
            app:boxCornerRadiusTopStart="@dimen/radius_normal"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTextFieldUsername"
            app:startIconDrawable="@mipmap/lock"
            app:startIconTint="@color/textInputIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginEnterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:padding="@dimen/login_enter_button_padding"
            android:text="@string/enter"
            android:textColor="@color/whiteBackground"
            android:textSize="@dimen/text_size_b1"
            app:cornerRadius="@dimen/radius_normal"
            app:layout_constraintEnd_toEndOf="@+id/loginTextFieldPassword"
            app:layout_constraintStart_toStartOf="@id/loginTextFieldPassword"
            app:layout_constraintTop_toBottomOf="@+id/loginTextFieldPassword" />

        <TextView
            android:id="@+id/noAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_no_account_margin_top"
            android:text="@string/noAccountQuestion"
            android:textColor="@color/hint"
            android:textSize="@dimen/text_size_b1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/secondVerticalGuide" />

        <Button
            android:id="@+id/loginRegisterButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/text_size_b1"
            app:layout_constraintBottom_toBottomOf="@+id/noAccountTextView"
            app:layout_constraintStart_toEndOf="@+id/secondVerticalGuide"
            app:layout_constraintTop_toTopOf="@+id/noAccountTextView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/secondVerticalGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.57" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/loginTextFieldUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:visibleOnResult="@{viewModel.loginResult}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>