<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteGlobalBackground">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="@dimen/toolbar_inset_start">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/homePage"
                    android:textColor="@color/whiteBackground"
                    android:textSize="@dimen/text_size_b1"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/articleProfileIcon"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_ten"
                    android:contentDescription="@string/open_profile_to_do"
                    android:src="@drawable/ic_profile" />

                <ImageButton
                    android:id="@+id/homeWriteButton"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:contentDescription="@string/write_article_to_do"
                    android:src="@drawable/ic_write" />


            </com.google.android.material.appbar.MaterialToolbar>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/homeTabLayout"
                style="@style/TabTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_normal"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginRight="@dimen/padding_normal"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@android:color/transparent"
                app:tabBackground="@drawable/selector_tab_layout"
                app:tabGravity="fill"
                app:tabIndicatorHeight="@dimen/home_tab_indicator_height"
                app:tabMaxWidth="@dimen/home_tab_max_width"
                app:tabMode="fixed"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="@color/colorPrimaryDark">

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

